--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "demoblog",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -22,5 +21,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "mongoose": "^5.6.9"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
